provarAnt/00D180000008cIAEAY/objects/Customer_Survey__c.object
<CustomObject>
    <description>Data from Customer Experience Feedback Surveys - COPS and DSI - Administered by Medallia</description>
    <fields>
        <fullName>AT_OSAT__c</fullName>
        <description>At Key Metric Section</description>
        <label>AT OSAT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_Retention__c</fullName>
        <description>Survey Response Key Metrics section</description>
        <label>AT Retention</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>used for the medallia import</description>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Survey Information Section</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Medallia_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Feedback__c</fullName>
        <description>Comments Section</description>
        <label>Agent Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Knowledge__c</fullName>
        <description>Survey Response Drivers Section</description>
        <label>Agent  Knowledge</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Professionalism__c</fullName>
        <description>Survey Response Drivers Section</description>
        <label>Agent Professionalism</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Taking_Ownership__c</fullName>
        <description>Survey Response Section</description>
        <label>Agent Taking Ownership</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Activity_Notes__c</fullName>
        <description>Survey Alert Section</description>
        <label>Alert Activity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Closed_By__c</fullName>
        <description>Survey Alert Section</description>
        <label>Alert Closed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Closed_Date__c</fullName>
        <description>Survey Alert Section</description>
        <label>Alert Closed Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Closure_Notes__c</fullName>
        <description>Survey Alert section</description>
        <label>Alert Closure Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Created_Date__c</fullName>
        <description>Survey Alert Section</description>
        <label>Alert Created Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Created__c</fullName>
        <description>Survey Alert Sectoin</description>
        <label>Alert Created</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <description>Survey Alert Section</description>
        <label>Alert Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoTrader_Feedback__c</fullName>
        <description>Comments Section</description>
        <label>AutoTrader Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutoTrader_General_Feedback__c</fullName>
        <description>Issues/Concerns Feedback section</description>
        <label>AutoTrader General Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutoTrader_KPI_s_Feedback__c</fullName>
        <description>Comments Section</description>
        <label>AutoTrader KPI&apos;s Feedback</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COPS_Case_Number__c</fullName>
        <description>Survey Information Section</description>
        <label>COPS Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Fulfilled_Resolved__c</fullName>
        <description>Fulfillment Section</description>
        <label>Case Fulfilled/Resolved</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Not_Resolved_Feedback__c</fullName>
        <description>Comments Section</description>
        <label>Case Not Resolved Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Survey Information Section</description>
        <label>Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Advantage__c</fullName>
        <description>Survey Response Key Metrics Sectoin</description>
        <label>Competitive Advantage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Survey Information Section</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Medallia_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Program__c</fullName>
        <label>Customer Program</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Survey_URL__c</fullName>
        <label>Customer Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Survey_View__c</fullName>
        <label>Customer Survey View</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMD_Case_Feedback__c</fullName>
        <description>Comments Section</description>
        <label>DMD Case Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMD_Graphic_Quality__c</fullName>
        <description>Survey Response Drivers Section</description>
        <label>DMD Graphic Quality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD_Time_for_Graphic__c</fullName>
        <label>DMD Time for Graphic</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Position_Comment__c</fullName>
        <label>Dealership Position Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Position__c</fullName>
        <description>Areas for Improvement section</description>
        <label>Dealership Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <description>Integration ID = External ID for data import</description>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <description>Survey Alert Section</description>
        <label>Issue Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Concerns_past_6_months__c</fullName>
        <description>Areas for Improvement section</description>
        <inlineHelpText>Click the Medallia survey view link listed above to view more details about the types of issues and their satisfaction with the resolution</inlineHelpText>
        <label>Issue/Concerns past 6 months?</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Resolution__c</fullName>
        <description>Survey Alert Section</description>
        <label>Resolution Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues_Concerns_Feedback__c</fullName>
        <description>Comments Section</description>
        <label>Issues/Concerns Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Metrics_Unfavorable_Feedback__c</fullName>
        <description>Comments section</description>
        <label>Key Metrics Unfavorable Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Measure_AT_Results__c</fullName>
        <description>Additional Details sectoin</description>
        <label>Measure AT Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Agent_Service__c</fullName>
        <label>Overall Agent Service</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Product_and_Tools__c</fullName>
        <description>Drivers section</description>
        <label>Overall Product and Tools</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Results__c</fullName>
        <description>Drives section</description>
        <label>Overall Results</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Sales_Rep_Experience__c</fullName>
        <description>Drivers Section</description>
        <label>Overall Sales Rep Experience</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_with_DMD_Feedback__c</fullName>
        <description>Survey Response section</description>
        <label>Overall Satisfaction with DMD Feedback</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Service_and_Support__c</fullName>
        <description>Drivers Section</description>
        <label>Overall Service and Support</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Value__c</fullName>
        <description>Survey Response Key Metrics section</description>
        <label>Overall Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_and_Tools_Need_Improvemdent__c</fullName>
        <label>Product and Tools Need Improvemdent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_and_Tools__c</fullName>
        <description>Areas for Improvement section</description>
        <label>Product and Tools</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Type__c</fullName>
        <label>R Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <description>Areas for Improvement section</description>
        <label>Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVOC_Master__c</fullName>
        <label>SVOC Master</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Serve_You_Better__c</fullName>
        <description>Additional Details Section</description>
        <label>Sales Rep Serve You Better</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <description>Areas for improvement section</description>
        <label>Sales Representative</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_and_Support__c</fullName>
        <description>Areas for Improvement section</description>
        <label>Service and Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Alert__c</fullName>
        <description>Issues Concern Feedback section</description>
        <label>Survey Alert</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <label>Survey Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Times_Contacted__c</fullName>
        <label>Times Contacted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Customer_Program__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Issue_Resolution__c</columns>
        <columns>Survey_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Program__c</field>
            <operation>equals</operation>
            <value>COP</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>testview_lee</fullName>
        <columns>NAME</columns>
        <columns>Integration_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>testview (lee)</label>
    </listViews>
    <nameField>
        <label>Customer Survey Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <recordTypes>
        <fullName>COP</fullName>
        <active>true</active>
        <label>COP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer_CX</fullName>
        <active>true</active>
        <label>Dealer CX</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>